--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
+    "react-dnd": "^9.3.4",
+    "react-dnd-html5-backend": "^9.3.4",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "yarn": "^1.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/skywalkerwin/reactdnd.git",
+  "author": "Luke Nguyen <lukehaonguyen@gmail.com>",
+  "license": "MIT"
 }
